# langchainagent

./: .bashrc.swp  .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  main.py  output_prompt.jinja2  pyproject.toml  start.sh
law_agent/: README.md  admin.html  index.html  package-lock.json  package.json  vite.config.js
law_agent/src/: App.vue  main.js
law_agent/src/components/: SiteLogo.vue
law_agent/src/pages/Chat/: ChatWindow.vue
law_agent/src/pages/Home/: Index.vue
law_agent/src/pages/Login/: Login.vue
law_agent/src/pages/Register/: signup.vue
law_agent/src/router/: index.js
models-service/: environment.yml
models-service/modules/embedding/: router.py
models-service/services/: __init__.py  router.py
models-service/src/core/: config.py
models-service/src/modules/embedding/: router.py
models-service/src/utils/: file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
models-service/utils/: file.py
mysql/init/: backup.sql
nginx/: nginx.conf
nginx/certs/: fullchain.pem  privkey.pem
spring-ai/law-backend-springboot/: Dockerfile  pom.xml  settings.xml
src/: dockerfile  md5.text
src/app/: main.py
src/app/core/: config.py
src/app/core/history/: chat_history.py
src/app/core/llm/: factory.py
src/app/modules/rag/: vector_store.py
src/app/utils/: config_handler.py
src/app/view/: show.py  showspring.py  showsprintrag.py
src/chroma_db/b22269f4-b838-4081-95b8-ecae6711622d/: index_metadata.pickle
src/config/: settings.yml
src/prompts/: law_prompt.md  main_prompt.md
(+64 files in other folders)
